--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,11 @@
         android:theme="@style/Theme.StoryApp"
         tools:targetApi="31">
 
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAWi2raaRYQcKbNDcqmqu5KmLDLuBsI5l8" />
+
         <activity
             android:name=".ui.CameraActivity"
             android:exported="false" />
